--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "axios": "^1.7.8",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-datepicker": "^7.5.0",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-switch": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
